# MaQueAI

./: .clang-format  .gitignore  README.md
.github/: CODEOWNERS
docker_config/: Dockerfile-MaQueAI
docker_config/.devcontainer/: devcontainer.json
scripts/: build_docker.sh  build_livo.sh  explain_structure.sh  run_docker.sh  run_docker_dev.sh  run_format.sh  setup_collaborative_workspace.sh  show_build_progress.sh  watch_docker_build.sh
src/: vikit_common  vikit_py  vikit_ros
src/LIVO/include/: IMU_Processing.h  frame.h  vio.h  voxel_map.h
src/LIVO/include/livox_ros_driver/: CustomPoint.h
src/LIVO/scripts/: colmap_output.sh
src/LIVO/src/: IMU_Processing.cpp  main.cpp  preprocess.cpp  vio.cpp
workspace/: SIMULATION_QUICK_START.md  SIMULATION_VISUALIZATION_GUIDE.md
workspace/scripts/: BUILD_USAGE.md  README.md
workspace/scripts/docker/: build_docker.sh  run_docker.sh  run_docker_dev.sh  run_docker_gui.sh  watch_docker_build.sh
workspace/scripts/simulation/: start_gazebo_sim.sh  start_px4_sim.sh  start_px4_simulation.sh
workspace/scripts/utils/: test_visualization.sh  verify_setup.sh
workspace/simulation/: README.md  SIMULATION_SYSTEM_GUIDE.md  run_simulation.sh
workspace/simulation/config/: simulation.yaml
workspace/simulation/launch/: maqueai_system.launch
workspace/simulation/scenarios/: autonomous_mission.yaml  basic_flight.yaml
workspace/simulation/scripts/: data_collector.py  result_analyzer.py  scenario_executor.py
workspace/simulation/worlds/: empty_world.world
workspace/src/LIVO/: CMakeLists.txt  README.md  package.xml
workspace/src/LIVO/include/: LIVMapper.h  common_lib.h  feature.h  frame.h  preprocess.h  visual_point.h
workspace/src/LIVO/include/livox_ros_driver/: CustomMsg.h
workspace/src/LIVO/include/utils/: so3_math.h  types.h
workspace/src/LIVO/launch/: mapping_avia.launch  mapping_avia_marslvig.launch  mapping_hesaixt32_hilti22.launch  mapping_ouster_ntu.launch
workspace/src/LIVO/scripts/: colmap_output.sh  mesh.py
workspace/src/LIVO/src/: LIVMapper.cpp  frame.cpp  visual_point.cpp  voxel_map.cpp
workspace/src/control/: CMakeLists.txt  package.xml
workspace/src/control/include/control/: pid_controller.h  trajectory_tracker.h
workspace/src/interface/: CMakeLists.txt  package.xml
workspace/src/interface/include/interface/: mavros_bridge.h
workspace/src/launch/: autonomous_system_cpp.launch
workspace/src/localization/: CMakeLists.txt  package.xml
workspace/src/localization/include/localization/: slam_processor.h
workspace/src/localization/msg/: LocalizationStatus.msg
workspace/src/localization/scripts/: slam_processor.py
workspace/src/localization/src/: slam_processor.cpp  slam_processor_node.cpp
workspace/src/planning/: CMakeLists.txt  package.xml
workspace/src/planning/scripts/: trajectory_planner.py
workspace/src/simulation/: CMakeLists.txt
