<?xml version="1.0"?>
<package format="2">
  <name>interface</name>
  <version>1.0.0</version>
  <description>High-performance MAVROS communication interface</description>
  
  <maintainer email="dev@example.com">Developer</maintainer>
  <license>MIT</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  
  <export></export>
</package> 